--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^9.5.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-query": "^2.25.2"
+    "react-query": "^2.25.2",
+    "react-query-devtools": "^2.6.1"
   }
 }
